feat: gera agentes dinamicamente pela configuracao